tests/language_tests/pass/0111_print_double_literals.ee
fn main() {
    println(1.5);
    println(.25);
    println(0.0);
}
