tests/language_tests/fail/0069_double_modulo_by_zero.ee
fn main() {
    print(5.0 % 0.0);
}
